# bb

./: .gitignore  Dockerfile  LICENSE.md  README.md  SECURITY.md  cli.py  cloud_logs.txt  do_commit.py  docker-compose.yml  execution_guide.md  fetch_cloud_logs.py  nixpacks.toml  pitch_deck.md  pyproject.toml  railway_api_injector.py  requirements.txt  start.sh  ui.html  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_task.py
delegated_tasks/: DELEGATE_WAF_20260319_123456.json  DELEGATE_WAF_20260319_123943.json  DELEGATE_WAF_20260319_124034.json  DELEGATE_WAF_20260319_124102.json  DELEGATE_WAF_20260319_124130.json  DELEGATE_WAF_20260320_195400.json
docs/: efficiency_guide.md
newintel/: since i am a newbie in this field explain how to d.md
src/: __init__.py
src/ai/: __init__.py  llm_router.py  report_generator.py  report_linter.py
src/api/: __init__.py  app.py  main.py
src/compliance/: __init__.py  ban_risk_score.py  tos_engine.py
src/core/: __init__.py  adaptive_engine.py  background_worker.py  delegation_broker.py  deployment_sentry.py  findings_ledger.py  notifier.py  recon_pipeline.py  safe_scheduler.py  submission_blocker.py  target_selector.py  workflow_engine.py
src/data/: __init__.py  acceptance_graph.py  bounty_per_hour_tracker.py  dup_predictor.py
src/revenue/: __init__.py  payment_gateway.py  revenue_share.py  subscription_engine.py
