[project]
name = "bugbounty-copilot"
version = "0.1.0"
description = "AI-powered Bug Bounty Co-Pilot — Compliance-first, HITL-enforced, India-first distribution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "BugBounty SaaS Team"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "celery>=5.5.0",
    "redis>=5.2.0",
    "razorpay>=1.4.0",
    "openai>=1.60.0",
    "anthropic>=0.45.0",
    "google-genai>=1.5.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
